# MAPGD

./: .README.md.swp  .gitignore  .travis.yml  .~lock.Readme.docx#  Commands.html  Conversion.html  DataTypes.html  Makefile  Makefile.in  PopLD_8h_source.html  README.md  README.txt  Raw.html  Readme.docx  RunMeLinux.sh  RunMeOSX.sh  RunMeWin-32.bat  RunMeWin-64.bat  RunMeWin.bat  \  aclocal.m4  allele_8h_source.html  allele__stat_8h_source.html  annotated.html  bam-header_8h_source.html  base_8h_source.html  bcf2pro-file_8h_source.html  bcf2pro_8h_source.html  bcf2pro__file_8h_source.html  bed__file_8h_source.html  bgt_8h_source.html  binomial_8h_source.html  bug_report  classA.html  classAllele.html  classAllele__coll__graph.map  classAllele__coll__graph.md5  classAllele__inherit__graph.map  classAllele__inherit__graph.md5  classArgument.html  (+517 more)
HPC/: README.md
Sam2pro_0.3/: Makefile  eprintf.h  interface.c  sam2pro.c  tab.h  test.sam
autom4te.cache/: output.0  requests  traces.0  traces.1
docs/: Ackerman2015.odt  Makefile  README.md
extras/: .graphreaddistriubution.py.swp  .~lock.data#  MakeNewtonRho.py  Rscript  SimulateGeneology.py  annotate.py  check_p.py  countshared.py  filter.py  find_sub.py  get_bias_and_mse.py  keys.py  long.map  make_bordyen_theta.py  make_job  make_newton_theta.py  map2fasta.py  mapgdutils.py  marker.txt  pedigree_calc.py  pedigree_calc2.py  pedigreecalc.py  plotdata.py  quick.sim.py  relatedness.py  relatedness.py.bk  relatedness2.py  relatedness_sim.py  score_markers.py  simulate_fastq.py  simulate_geneology_and_trait.py  simulate_geneology_f.py  simulate_geneology_g.py  simulate_geneology_gene.py  simulate_geneology_inbreeding.py  simulate_mpileup.py  simulate_pooled.py  simulate_random_IBD.py  sub_sample.py  temp.py
hpc/: README.md
html/: allele__stat_8h_source.html  annotated.html  binomial_8h_source.html  classLocus.html  classallele__stat.html  classarg__t.html  classbinomial.html  classcom__t.html  classenv__t.html  classes.html  classfile__handler.html  classfile__index.html  classflag__t.html  classgcf__file.html  classgenotype.html  classlnmultinomial.html  classmap__file.html  classmodels.html  classpopulation.html  classprofile.html  classprofile__header.html  commands_8h_source.html  compare-individual_8h_source.html  compare-pooled_8h_source.html  datatypes_8h_source.html  dir_234819ec74e366a32252d71c6091b39b.html  estimate-individual_8h_source.html  estimate-pooled_8h_source.html  file-handler_8h_source.html  file-index_8h_source.html  files.html  filter_8h_source.html  functions.html  functions_b.html  functions_c.html  functions_e.html  functions_func.html  functions_h.html  functions_i.html  functions_l.html  (+32 more)
latex/: annotated.tex  classLocus.tex  classallele__stat.tex  classarg__t.tex  classbinomial.tex  classcom__t.tex  classenv__t.tex  classfile__handler.tex  classfile__index.tex  classflag__t.tex  classgcf__file.tex  classgenotype.tex  classlnmultinomial.tex  classmap__file.tex  classmodels.tex  classpopulation.tex  classprofile.tex  classprofile__header.tex  dir_234819ec74e366a32252d71c6091b39b.tex  index.tex  refman.tex  (+5 more)
test/: 2  (+3 more)
(+1168 files in other folders)
